--- a/client-messagethroughtime/package.json
+++ b/client-messagethroughtime/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "npm run dev"
   },
   "dependencies": {
     "core-js": "^3.8.3",
