--- a/client-messagethroughtime/package.json
+++ b/client-messagethroughtime/package.json
@@ -9,6 +9,7 @@
     "dev": "npm run dev"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5"
