--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "api-messagethroughtime" #Must be unique in Heroku
-          heroku_email: "YOUR EMAIL"
+          heroku_email: "proesslet@gmail.com"
