--- a/api/package.json
+++ b/api/package.json
@@ -14,8 +14,9 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "ws": "^8.16.0",
-    "pdfjs": "^2.5.3"
+    "pdfjs": "^2.5.3",
+    "ws": "^8.16.0"
   }
 }
