--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "pdfjs": "^2.5.3",
