--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.0.3"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.2",
